[metadata]
name = 9dm
version = 0.1.0
long_description = file: README.rst
description = 9seconds' dotfiles manager
maintainer = Sergey Arkhipov
maintainer_email = nineseconds@yandex.ru
author = Sergey Arkhipov
author_email = nineseconds@yandex.ru
url = https://githib.com/9seconds/9dm
license = MIT
python_requires = ~=3.5
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[options]
zip_safe = False
scripts =
  9dm

[flake8]
show-source = True
exclude = build,dist,docs/conf.py,*.egg-info,.eggs,.cache
inline-quotes = "
import-order-style = smarkets
ignore = I202

[bdist_wheel]
universal = 0
